--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/dummy.css">
+    <link rel="stylesheet" href="assets/zenburn.css">
 
     {{content-for "head-footer"}}
   </head>
