:white_check_mark: Remove block param tests for components without block params

--- a/tests/index.html
+++ b/tests/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="{{rootURL}}assets/dummy.css">
     <link rel="stylesheet" href="{{rootURL}}assets/test-support.css">
 
+    <!-- Fix app styles ruining our beautiful tests -->
+    <style>li{margin-bottom: 0;}</style>
+
     {{content-for "head-footer"}}
     {{content-for "test-head-footer"}}
   </head>
