Maybe change CSS naming conflict

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -10,7 +10,7 @@
     {{content-for "head"}}
 
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link rel="stylesheet" href="{{rootURL}}assets/ember-fountainhead.css"
+    <!--link rel="stylesheet" href="{{rootURL}}assets/ember-fountainhead.css"-->
     <link rel="stylesheet" href="{{rootURL}}assets/dummy.css">
 
     <!-- Totally great hack for enabling a SPA within Github pages -->
