--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for "head"}}
 
+    <link rel="stylesheet" href="{{rootURL}}ember-radical.css">
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/dummy.css">
 
