--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ember Fountainhead</title>
+    <link href="{{rootURL}}favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
